--- a/ReleaseNotes.text
+++ b/ReleaseNotes.text
@@ -1,3 +1,15 @@
+1.1.4 (SNAPSHOT)
+
+* fixed bug in XML renderer, which was introducing
+  <item> nodes when it should not have.
+
+* The names allocated to pseudo-bnodes in the XML
+  tree now start "_:".
+
+* progress towards eliminating use of UriBuilder from
+  endpoint code (then from CallContext, reducing
+  dependencies.)
+
 1.1.3 (21 April 2011):
 
 * corrections to language-tag handling: the _lang query
