ignored empty _sort entries.

--- a/ReleaseNotes.text
+++ b/ReleaseNotes.text
@@ -4,7 +4,7 @@
   endpoint is an item endpoint.
 
 * Elda will quietly ignore empty elements of a _property=x,y,z
-  query parameter.
+  or _sort=x,y,z query parameter.
 
 * OFFSET-LIMIT is now applied to fixed select queries, ie, those
   specified by api:select configs or _select= query parameters.
