--- a/ReleaseNotes.text
+++ b/ReleaseNotes.text
@@ -9,9 +9,9 @@
   otherwise the default view, and correctly over-ride the view with
   the properties and not vice-versa.
 
-  Adding properties to a describe viewer (still) does not work as
-  (probably) intended; a describe viewer has not property chains.
-  This will be fixed soon.
+  Adding properties to a DESCRIBE-based viewer works; Elda makes
+  additional queries to the SPARQL endpoint. (These do not show
+  up in the view query panel produced by the XSLT renderer.)
 
 1.1.13
 
