--- a/Notelets/history.text
+++ b/Notelets/history.text
@@ -1,3 +1,24 @@
+1.2.6
+
+* The standalone jar attaches Elda to the root
+  / rather than /elda.
+
+* RouterRestlet is marked as producing */* (so that
+  binary formats like PDF can be asked for).
+
+* XML renderer avoids horrible output when the model
+  is tangled through the selected items.
+
+* Changes in dependencies on XSLT translator.
+
+* Substitution of ?var respects type of var.
+
+* Correction to the generation of the definition URI
+  (it was using the wrong template).
+
+* Elda now depends on the Apache-incubating Jena, not
+  previous snapshots.
+
 1.2.5
 
 * Elda logs its version information when it starts up.
